web/src/components/Carousel/carousel.module.css
@import '../../styles/custom-media.css';
@import '../../styles/custom-properties.css';

.root {
  background: var(--clear);
  position: relative;
}



.root:-webkit-scrollbar {    display: none;}
.outer{
  overflow-x:auto;
  
}
.slide-track {
  overflow: hidden;
  display: inline-flex;
  width: auto;
  transition:1s;
  transition-timing-function:linear;

}
.inner{
  background-color: var(--color-light-blue);
  height:30vh;
  overflow-x: scroll;
  overflow-y:hidden;
  cursor: grab;
  /* height:40vh;
  overflow: visible;
  white-space:nowrap; */
  @media (--media-min-medium) {
    height: 40vh;
  }
}
/* Hide scrollbar for Chrome, Safari and Opera */
.inner::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.inner {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}
.root h4{
  bottom:-1em;
  position: absolute;
  text-overflow: ellipsis;
  max-width: 100%;
  width: calc(100% - 20px);
  padding:5px 10px;
  /* padding-right:20px; */
  overflow: hidden;
  white-space: nowrap;
  background-color: var(--color-light-blue);
  box-shadow: 0px 0px 5px 5px var(--color-light-blue);
  color:var(--color--black);
  text-decoration: none;
}

.root .inner > *{
  position: relative;
  color:var(--color--black);
  width: -moz-max-content;
  width: max-content;
  text-decoration: none;
}
.root a{
  color:var(--color--black);
}
.root li > a{
  color:var(--color--black);
  text-decoration: none;
}
.figure{
  margin:0 5px;
}
.root .embed{
  height: 30vh !important;
  width: 73.5vh !important;
  overflow: hidden;
  @media (--media-min-medium) {
    height: 40vh !important;
  }
}
.root .embed iframe{
  /* max-width: calc(177.778vh);
    height: calc(56.25vw
); */
  height: calc(23vh * (100/56.25)) !important;
  width: calc(129vh * (100/177.778)) !important;
  margin:0;
  pointer-events: none;
}
.pdf iframe{
  height: 30vh;
  cursor: pointer;
  @media (--media-min-medium) {
    height: 40vh;
  }
}
.noCarousel{
  display:flex;
}
.root .pdf:hover{
  /* filter:blur(3px); */
  mix-blend-mode: multiply;
  opacity: 0.5;
}
.root .pdf iframe{
  pointer-events: none;
}
.embed > div{
  padding:0 !important;
}
.root .embed,.root .pdf,.root .figure, .root .embed *,.root .pdf *,.root .figure *, .root a{
  -webkit-user-drag: none;
  user-select: none;
}

.embed > iframe{
  position: relative !important;
}
.embed p{
  display: none;
}
.figure, .figure  div, .figure  img{
  height: 30vh;
  display: inline-block;
  @media (--media-min-medium) {
    height: 40vh;
  }
}
.wrapper{
  box-shadow: inset 0 0 5px 5px var(--color-light-blue);
  height:100%;
  width:100%;
  position: absolute;
  pointer-events: none;
  top:0;
  left:0;
}

.figure img{
  height: 100%;
  width: auto;
}
.figure img:hover{
  /* filter:blur(3px); */
  mix-blend-mode: multiply;
  opacity: 0.5;
  cursor: pointer;
}
.root .embed:hover{
  /* filter:blur(3px); */
  mix-blend-mode: multiply;
  opacity: 0.5;
  cursor: pointer;
}
.root figcaption{
  display: none;
}
.simpleImage{
  height:auto;
  margin:0;
  max-width: 50%;
  @media (--media-min-medium) {
    max-width: 25%;
  }
}

